some image and text changes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div class="tutorial" id="dialogue0">
 			<div class="dialogueBox">
 				<h2 id="tutHead">Tutorial</h2>
-				<p class="tutorialText">Welcome to <span>Antwerp, You're my Type.</span><br><img src="./logo.svg" id="tutorialImg">Together with the <span>Plantin-Moretus Museum</span> you're about to start a journey through the rich typographical world of the city of Antwerp. That's right, letters! They're big here. You'll learn about our history, the history we're making right now, and how it all connects. And... you have the chance to win <span>exciting prizes</span>!</p>
+				<p class="tutorialText">Welcome to the <span>Antwerp, You're my Type</span> application: The <span>Antwerp Type Map.</span><br><img src="./logo.svg" id="tutorialImg">Together with the <span>Plantin-Moretus Museum</span> you're about to start a journey through the rich typographical world of the city of Antwerp. That's right, letters! They're big here. You'll learn about our history, the history we're making right now, and how it all connects. And... you have the chance to win <span>exciting prizes</span>!</p>
 				<h2 id="instruction">Press the Next button to procceed.</h2>
 				<h3 class="nextButtonTut">Next</h3>
 				<h3 class="endButtonTut">End</h3>
