new folder structure

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>Antwerp Type Map</title>
-		<link rel="stylesheet" type="text/css" href="reset_plus.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<script src="script.js" defer></script>
+		<link rel="stylesheet" type="text/css" href="./css/reset_plus.css">
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<script src="./js/script.js" defer></script>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://cdn.antwerpen.be/core_branding_scss/5.0.1/main.min.css">
@@ -18,30 +18,30 @@
 		</div>
 		<div class="map">
 			<div id="section1">
-				<img src="./circle1.svg" class="point" id="point1">
+				<img src="./img/circle1.svg" class="point" id="point1">
 				<h3>Plantin Speaks?!</h3>
 			</div>
 			<div id="section2">
-				<img src="./circle2.svg" class="point" id="point2">
-				<img src="./circle3.svg" class="point" id="point3">
-				<img src="./circle4.svg" class="point" id="point4">
+				<img src="./img/circle2.svg" class="point" id="point2">
+				<img src="./img/circle3.svg" class="point" id="point3">
+				<img src="./img/circle4.svg" class="point" id="point4">
 				<h3>A Type of History</h3>
 			</div>
 			<div id="section3">
-				<img src="./circle5.svg" class="point" id="point5">
-				<img src="./circle6.svg" class="point" id="point6">
-				<img src="./circle7.svg" class="point" id="point7">
-				<img src="./circle8.svg" class="point" id="point8">
+				<img src="./img/circle5.svg" class="point" id="point5">
+				<img src="./img/circle6.svg" class="point" id="point6">
+				<img src="./img/circle7.svg" class="point" id="point7">
+				<img src="./img/circle8.svg" class="point" id="point8">
 				<h3>A Type of Present</h3>
 			</div>
 			<div id="section4">
-				<img src="./circle9.svg" class="point" id="point9">
-				<img src="./circle10.svg" class="point" id="point10">
-				<img src="./circle11.svg" class="point" id="point11">
+				<img src="./img/circle9.svg" class="point" id="point9">
+				<img src="./img/circle10.svg" class="point" id="point10">
+				<img src="./img/circle11.svg" class="point" id="point11">
 				<h3>Antwerp Abroad</h3>
 			</div>
 			<div id="section5">
-				<img src="./circle12.svg" class="point" id="point12">
+				<img src="./img/circle12.svg" class="point" id="point12">
 				<h3>The Farewell Letters</h3>
 			</div>
 		</div>
@@ -49,7 +49,7 @@
 		<div class="tutorial" id="dialogue0">
 			<div class="dialogueBox">
 				<h2 id="tutHead">Tutorial</h2>
-				<p class="tutorialText">Welcome to the <span>Antwerp, You're my Type</span> application: The <span>Antwerp Type Map.</span><br><img src="./logo.svg" id="tutorialImg">Together with the <span>Plantin-Moretus Museum</span> you're about to start a journey through the rich typographical world of the city of Antwerp. That's right, letters! They're big here. You'll learn about our history, the history we're making right now, and how it all connects. And... you have the chance to win <span>exciting prizes</span>!</p>
+				<p class="tutorialText">Welcome to the <span>Antwerp, You're my Type</span> application: The <span>Antwerp Type Map.</span><br><img src="./img/logo.svg" id="tutorialImg">Together with the <span>Plantin-Moretus Museum</span> you're about to start a journey through the rich typographical world of the city of Antwerp. That's right, letters! They're big here. You'll learn about our history, the history we're making right now, and how it all connects. And... you have the chance to win <span>exciting prizes</span>!</p>
 				<h2 id="instruction">Press the Next button to procceed.</h2>
 				<h3 class="nextButtonTut">Next</h3>
 				<h3 class="endButtonTut">End</h3>
@@ -63,7 +63,7 @@
 				<p class="dialogueText">dialogue1 line1 comes here</p>
 				<h3 class="nextButton">Next</h3>
 				<h3 class="endButton">End</h3>
-				<img src="./speech_arrow.svg" class="speechArrow">
+				<img src="./img/speech_arrow.svg" class="speechArrow">
 			</div>
 		</div>
 
@@ -74,7 +74,7 @@
 				<p class="dialogueText">dialogue1 line1 comes here</p>
 				<h3 class="nextButton">Next</h3>
 				<h3 class="endButton">End</h3>
-				<img src="./speech_arrow.svg" class="speechArrow">
+				<img src="./img/speech_arrow.svg" class="speechArrow">
 			</div>
 		</div>
 
@@ -85,7 +85,7 @@
 				<p class="dialogueText">dialogue1 line1 comes here</p>
 				<h3 class="nextButton">Next</h3>
 				<h3 class="endButton">End</h3>
-				<img src="./speech_arrow.svg" class="speechArrow">
+				<img src="./img/speech_arrow.svg" class="speechArrow">
 			</div>
 		</div>
 
@@ -96,7 +96,7 @@
 				<p class="dialogueText">dialogue1 line1 comes here</p>
 				<h3 class="nextButton">Next</h3>
 				<h3 class="endButton">End</h3>
-				<img src="./speech_arrow.svg" class="speechArrow">
+				<img src="./img/speech_arrow.svg" class="speechArrow">
 			</div>
 		</div>
 
@@ -107,7 +107,7 @@
 				<p class="dialogueText">dialogue1 line1 comes here</p>
 				<h3 class="nextButton">Next</h3>
 				<h3 class="endButton">End</h3>
-				<img src="./speech_arrow.svg" class="speechArrow">
+				<img src="./img/speech_arrow.svg" class="speechArrow">
 			</div>
 		</div>
 
@@ -118,7 +118,7 @@
 				<p class="dialogueText">dialogue1 line1 comes here</p>
 				<h3 class="nextButton">Next</h3>
 				<h3 class="endButton">End</h3>
-				<img src="./speech_arrow.svg" class="speechArrow">
+				<img src="./img/speech_arrow.svg" class="speechArrow">
 			</div>
 		</div>
 
@@ -129,7 +129,7 @@
 				<p class="dialogueText">dialogue1 line1 comes here</p>
 				<h3 class="nextButton">Next</h3>
 				<h3 class="endButton">End</h3>
-				<img src="./speech_arrow.svg" class="speechArrow">
+				<img src="./img/speech_arrow.svg" class="speechArrow">
 			</div>
 		</div>
 
@@ -140,7 +140,7 @@
 				<p class="dialogueText">dialogue1 line1 comes here</p>
 				<h3 class="nextButton">Next</h3>
 				<h3 class="endButton">End</h3>
-				<img src="./speech_arrow.svg" class="speechArrow">
+				<img src="./img/speech_arrow.svg" class="speechArrow">
 			</div>
 		</div>
 
@@ -151,7 +151,7 @@
 				<p class="dialogueText">dialogue1 line1 comes here</p>
 				<h3 class="nextButton">Next</h3>
 				<h3 class="endButton">End</h3>
-				<img src="./speech_arrow.svg" class="speechArrow">
+				<img src="./img/speech_arrow.svg" class="speechArrow">
 			</div>
 		</div>
 
@@ -162,7 +162,7 @@
 				<p class="dialogueText">dialogue1 line1 comes here</p>
 				<h3 class="nextButton">Next</h3>
 				<h3 class="endButton">End</h3>
-				<img src="./speech_arrow.svg" class="speechArrow">
+				<img src="./img/speech_arrow.svg" class="speechArrow">
 			</div>
 		</div>
 
@@ -173,7 +173,7 @@
 				<p class="dialogueText">dialogue1 line1 comes here</p>
 				<h3 class="nextButton">Next</h3>
 				<h3 class="endButton">End</h3>
-				<img src="./speech_arrow.svg" class="speechArrow">
+				<img src="./img/speech_arrow.svg" class="speechArrow">
 			</div>
 		</div>
 
@@ -184,7 +184,7 @@
 				<p class="dialogueText">dialogue1 line1 comes here</p>
 				<h3 class="nextButton">Next</h3>
 				<h3 class="endButton">Start Quiz</h3>
-				<img src="./speech_arrow.svg" class="speechArrow">
+				<img src="./img/speech_arrow.svg" class="speechArrow">
 			</div>
 		</div>
 
